--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Frank Müller-Pierstorff</title>
+  <link rel="preconnect" href="https://api.fontshare.com">
+  <link href="https://api.fontshare.com/v2/css?f[]=satoshi@500&display=swap" rel="stylesheet">
+
+  
+<style>
+  body {
+    background: radial-gradient(circle at 30% 40%, #f9f9f9, #ffffff);
+    font-family: 'Satoshi', sans-serif;
+    color: rgba(0, 0, 0, 0.85);
+    font-size: 96px;
+    font-weight: 500;
+    line-height: 1.15;
+    margin: 0;
+    padding: 80px 60px;
+  }
+
+  a {
+    color: rgba(0, 0, 0, 0.85);
+    text-decoration: underline;
+  }
+
+  a:hover {
+    opacity: 0.6;
+  }
+
+ h5 {
+      font-size: 16px;
+      font-weight: 300;
+      margin: 160px 0px 40px 0px;
+
+    }
+
+  @media (max-width: 768px) {
+    body {
+      font-size: 42px;
+      padding: 40px 20px;
+    }
+  }
+
+a, a:active, a:visited {
+	color: #000;
+	text-decoration: none;
+	border-bottom: 4px solid #000;
+}
+
+a:hover {
+	border-bottom: none;
+}
+
+</style>
+
+
+</head>
+<body>
+
+<b>Obvious</b> is a hands-on, no-fluff  clarity practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
+
+
+
+<h5>© 2025 This is Obvious.</h5>
+
+</body>
+</html>
