--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ a:hover {
 </head>
 <body>
 
-<b>Obvious</b> is a hands-on, no-fluff  clarity practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
+<b>Obvious</b> is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
 
 
 
