--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>This is Obvious.</title>
   <link rel="preconnect" href="https://api.fontshare.com">
-  <link href="https://api.fontshare.com/v2/css?f[]=satoshi@300;500&display=swap" rel="stylesheet">
+  <link href="https://api.fontshare.com/v2/css?f[]=satoshi@300;500;800&display=swap" rel="stylesheet">
 
   
 <style>
@@ -29,6 +29,13 @@
   a:hover {
     opacity: 0.6;
   }
+
+
+ h1 {
+      font-size: 96px;
+      font-weight: 800;
+    }
+
 
  h5 {
       font-size: 24px;
@@ -60,7 +67,7 @@ a:hover {
 </head>
 <body>
 
-<b>Obvious</b> is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
+<bh1>Obvious</h1> is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
 
 
 
