--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ a:hover {
 </head>
 <body>
 
-<bh1>Obvious</h1> is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
+<h1>Obvious</h1> is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
 
 
 
