--- a/index.html
+++ b/index.html
@@ -31,10 +31,17 @@
   }
 
 
- h1 {
-      font-size: 96px;
-      font-weight: 800;
-    }
+h1 {
+  display: inline;
+  font-size: 96px;
+  font-weight: 800;
+}
+
+p {
+  display: inline;
+  font-size: 96px;
+  font-weight: 400;
+}
 
 
  h5 {
@@ -67,7 +74,7 @@ a:hover {
 </head>
 <body>
 
-<h1>Obvious</h1> is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
+<h1>Obvious</h1> <p>is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a></p>
 
 
 
