--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>This is Obvious.</title>
   <link rel="preconnect" href="https://api.fontshare.com">
-  <link href="https://api.fontshare.com/v2/css?f[]=satoshi@300;500;800&display=swap" rel="stylesheet">
+  <link href="https://api.fontshare.com/v2/css?f[]=satoshi@300;400;500;800;900&display=swap" rel="stylesheet">
 
   
 <style>
@@ -15,7 +15,7 @@
     font-family: 'Satoshi', sans-serif;
     color: rgba(0, 0, 0, 0.85);
     font-size: 96px;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 1.15;
     margin: 0;
     padding: 80px 60px;
@@ -31,17 +31,13 @@
   }
 
 
-h1 {
-  display: inline;
+bold. {
+
   font-size: 96px;
-  font-weight: 800;
+  font-weight: 900;
 }
 
-p {
-  display: inline;
-  font-size: 96px;
-  font-weight: 400;
-}
+
 
 
  h5 {
@@ -74,7 +70,7 @@ a:hover {
 </head>
 <body>
 
-<h1>Obvious</h1> <p>is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a></p>
+<bold>Obvious</bold> is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
 
 
 
