--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     background: radial-gradient(circle at 30% 40%, #f9f9f9, #ffffff);
     font-family: 'Satoshi', sans-serif;
     color: rgba(0, 0, 0, 0.85);
-    font-size: 96px;
+    font-size: 88px;
     font-weight: 400;
     line-height: 1.15;
     margin: 0;
@@ -33,7 +33,7 @@
 
 bold. {
 
-  font-size: 96px;
+  font-size: 88px;
   font-weight: 900;
 }
 
@@ -70,7 +70,7 @@ a:hover {
 </head>
 <body>
 
-<bold>Obvious</bold> is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
+<span class="bold">Obvious</span> is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
 
 
 
