--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     color: rgba(0, 0, 0, 0.85);
     font-size: 88px;
     font-weight: 400;
-    line-height: 1.15;
+    line-height: 1.2;
     margin: 0;
     padding: 80px 60px;
   }
@@ -70,7 +70,7 @@ a:hover {
 </head>
 <body>
 
-<span class="bold">Obvious</span> is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
+Obvious is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
 
 
 
