--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hello, I'm Frank.</title>
+  <title>This is Obvious.</title>
 
   <!-- Satoshi Font (Fontshare) -->
   <link rel="stylesheet" href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400,500,700&display=swap">
@@ -23,12 +23,14 @@
     }
 
     body {
-      min-height: 100vh;
+      height: 100dvh;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 10vh 20px;
+      padding: 0 20px;
       box-sizing: border-box;
+      overflow-y: auto;
+      overscroll-behavior: contain;
     }
 
     .container {
@@ -47,7 +49,7 @@
     h5 {
       font-size: clamp(16px, 2vw, 24px);
       font-weight: 400;
-      margin-top: 10vh; /* Flexibler Abstand */
+      margin-top: 10vh;
       color: rgba(0, 0, 0, 0.5);
     }
 
