--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
       font-size: clamp(16px, 2vw, 24px);
       font-weight: 400;
       margin-top: 10vh;
-      color: rgba(0, 0, 0, 0.5);
+      color: rgba(0, 0, 0, 0.85);
     }
 
     a, a:active, a:visited {
-      color: #000;
+      color: rgba(0, 0, 0, 0.85);
       text-decoration: none;
-      border-bottom: 2px solid #000;
+      border-bottom: 2px solid rgba(0, 0, 0, 0.85);
     }
 
     a:hover {
