--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
       overscroll-behavior: contain;
     }
 
-    .container {
-      max-width: 80%;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-    }
+  .container {
+  width: 100%;
+  max-width: clamp(90%, 80vw, 1200px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0 20px;
+  margin: 0 auto;
+}
 
     p {
       margin: 0;
