--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       Obvious is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. 
       <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
     </p>
-    <h5>© 2025 This is Obvious</h5>
+    <h5>© 2025 This is Obvious · <a href="mailto:frank@thisisobvious">Contact</a> · <a href="https://www.thisisobvious.com/legal.html" target="_blank">Legal</a></h5>
   </div>
 </body>
 </html>
