--- a/legal.html
+++ b/legal.html
@@ -100,7 +100,7 @@
       This website does not use cookies, analytics tools, or any tracking mechanisms. No personal data is collected unless you actively contact me (e.g., by email).
     </p>
     <p>
-      Emails sent to me are stored securely and only used for communication. No data is shared with third parties. You can request the deletion of your data at any time by contacting <a href="mailto:frank@uthisisobvious.com">invest@unitedstatesofdesign.com</a>.
+      Emails sent to me are stored securely and only used for communication. No data is shared with third parties. You can request the deletion of your data at any time by contacting <a href="mailto:frank@thisisobvious.com">frank@thisisobvious.com</a>.
     </p>
 
     <h2>Copyright</h2>
@@ -112,7 +112,7 @@
     <p>
       Frank Müller-Pierstorff<br>
       Berlin, Germany<br>
-      <a href="mailto:frankt@thisisobvious.com">frankt@thisisobvious.com</a>
+      <a href="mailto:frank@thisisobvious.com">frankt@thisisobvious.com</a>
     </p>
 
     <h5>© 2025 This is Obvious</h5>
