--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <div class="container">
     <p>
       Obvious is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. 
-      <a href="mailto:frankmuellerpierstorff@gmail.com">Get in touch</a>
+      <a href="mailto:frank@thisisobvious.com.com">Get in touch</a>
     </p>
     <h5>© 2025 This is Obvious · <a href="mailto:frank@thisisobvious">Contact</a> · <a href="https://www.thisisobvious.com/legal.html" target="_blank">Legal</a></h5>
   </div>
