--- a/legal.html
+++ b/legal.html
@@ -75,7 +75,7 @@
     <h2>Information pursuant to § 5 TMG</h2>
     <p>
       Frank Müller-Pierstorff<br>
-      Personal website<br>
+      Personal project website<br>
       Email: <a href="mailto:frank@thisisobvious.com">frank@thisisobvious.com</a>
     </p>
 
