--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>This is Obvious.</title>
+  <title>Obvious</title>
 
   <!-- Satoshi Font (Fontshare) -->
   <link rel="stylesheet" href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400,500,700&display=swap">
@@ -73,7 +73,7 @@
       Obvious is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. 
       <a href="mailto:frank@thisisobvious.com">Get in touch</a>
     </p>
-    <h5>© 2025 This is Obvious · <a href="mailto:frank@thisisobvious">Contact</a> · <a href="https://www.thisisobvious.com/legal.html" target="_blank">Legal</a></h5>
+    <h5>© 2025 Obvious · <a href="mailto:frank@thisisobvious">Contact</a> · <a href="https://www.thisisobvious.com/legal.html" target="_blank">Legal</a></h5>
   </div>
 </body>
 </html>
