--- a/legal.html
+++ b/legal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Legal — This is Obvious.</title>
+  <title>Legal — Obvious</title>
 
   <!-- Satoshi Font (Fontshare) -->
   <link rel="stylesheet" href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400,500,700&display=swap">
@@ -115,7 +115,7 @@
       <a href="mailto:frank@thisisobvious.com">frankt@thisisobvious.com</a>
     </p>
 
-    <h5>© 2025 This is Obvious</h5>
+    <h5>© 2025 Obvious</h5>
   </div>
 </body>
 </html>
