Revise advisory practice description in index.htmlUpdate text
Updated the description of the advisory practice and added emphasis on 'Design, AI & Purpose'.

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
       overscroll-behavior: contain;
     }
 
-  .container {
-  width: 100%;
-  max-width: clamp(90%, 80vw, 1200px);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 0 20px;
-  margin: 0 auto;
-}
+    .container {
+      width: 100%;
+      max-width: clamp(90%, 80vw, 1200px);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      padding: 0 20px;
+      margin: 0 auto;
+    }
 
     p {
       margin: 0;
@@ -70,8 +70,11 @@
 <body>
   <div class="container">
     <p>
-      Obvious is a hands-on, no-fluff advisory practice for CEOs, executives, or boards at the intersection of brand building, customer experience, design integration and strategic execution. 
-      <a href="mailto:frank@thisisobvious.com">Get in touch</a>
+      <strong>Obvious</strong> is a hands-on, no-fluff advisory for CEOs, founders, and boards at the intersection of 
+      <strong>Design, AI & Purpose</strong> — helping shape modern brands, bold experiences, and smart strategies that stand out.
+      <br><br>
+      Collaborations range from sharp sparring sessions to interim leadership. 
+      <a href="mailto:frank@thisisobvious.com">Get in touch</a>.
     </p>
     <h5>© 2025 Obvious · <a href="mailto:frank@thisisobvious.com">Contact</a> · <a href="https://www.thisisobvious.com/legal.html" target="_blank">Legal</a></h5>
   </div>
