Update styles and structure in index.html
Refactor CSS styles for improved layout and design.

--- a/index.html
+++ b/index.html
@@ -9,63 +9,71 @@
   <link rel="stylesheet" href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400,500,700&display=swap">
 
   <style>
-    :root {
-      --text: rgba(0,0,0,0.85);
-      --bg-a: #ffffff;
-      --bg-b: #f7f7f7;
-    }
-    * { box-sizing: border-box; }
     html, body {
       margin: 0;
       padding: 0;
-      font-family: "Satoshi", system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-      background: radial-gradient(circle at 30% 40%, var(--bg-b), var(--bg-a));
-      color: var(--text);
+      font-family: 'Satoshi', sans-serif;
+      font-weight: 400;
+      background: radial-gradient(circle at 30% 40%, #f9f9f9, #ffffff);
+      color: rgba(0, 0, 0, 0.85);
+      font-size: clamp(24px, 8vw, 64px);
       line-height: 1.25;
+      text-align: left;
       overflow-x: hidden;
     }
+
     body {
-      min-height: 100dvh;
-      display: grid;
-      place-items: center;
-      padding: 24px;
+      height: 100dvh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0 20px;
+      box-sizing: border-box;
+      overflow-y: auto;
+      overscroll-behavior: contain;
     }
+
     .container {
       width: 100%;
-      max-width: 1100px;
-      font-size: clamp(22px, 6.5vw, 56px);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      padding: 0 20px;
+      margin: 0 auto;
     }
-    p { margin: 0; }
-    .spacer { height: 1.25em; }
-    a, a:visited {
-      color: var(--text);
-      text-decoration: none;
-      border-bottom: 2px solid var(--text);
+
+    p {
+      margin: 0;
     }
-    a:hover { border-bottom: 0; }
-    footer {
+
+    h5 {
+      font-size: clamp(16px, 2vw, 24px);
+      font-weight: 400;
       margin-top: 10vh;
-      font-size: clamp(14px, 1.6vw, 18px);
-      color: var(--text);
+      color: rgba(0, 0, 0, 0.85);
     }
-    footer a { border-bottom-width: 1px; }
+
+    a, a:active, a:visited {
+      color: rgba(0, 0, 0, 0.85);
+      text-decoration: none;
+      border-bottom: 2px solid rgba(0, 0, 0, 0.85);
+    }
+
+    a:hover {
+      border-bottom: none;
+    }
   </style>
 </head>
 
 <body>
-  <main class="container">
+  <div class="container">
     <p>
       Obvious is a hands-on, no-fluff advisory for CEOs, founders, and boards at the intersection of Design, AI & Purpose — helping create modern brands, bold products, and smart strategies that make a dent.
-    </p>
-    <div class="spacer"></div>
-    <p>
+      <br><br>
       From sparring sessions to interim leadership. <a href="mailto:frank@thisisobvious.com">Get in touch</a>.
     </p>
-
-    <footer>
-      © 2025 Obvious · <a href="mailto:frank@thisisobvious.com">Contact</a> ·
-      <a href="https://www.thisisobvious.com/legal.html" target="_blank" rel="noopener">Legal</a>
-    </footer>
-  </main>
+    <h5>© 2025 Obvious · <a href="mailto:frank@thisisobvious.com">Contact</a> · <a href="https://www.thisisobvious.com/legal.html" target="_blank">Legal</a></h5>
+  </div>
 </body>
 </html>
