--- a/index.html
+++ b/index.html
@@ -23,18 +23,13 @@
     }
 
     body {
-      height: 100dvh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 0 20px;
+      padding: 120px 20px 40px 20px;
       box-sizing: border-box;
-      overflow-y: auto;
-      overscroll-behavior: contain;
     }
 
     .container {
       width: 100%;
+      max-width: clamp(90%, 80vw, 1200px);
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -44,7 +39,12 @@
     }
 
     p {
-      margin: 0;
+      margin: 0 0 2rem 0;
+    }
+
+    h1 {
+      font-weight: 500;
+      margin: 0 0 1rem 0;
     }
 
     h5 {
@@ -63,6 +63,11 @@
     a:hover {
       border-bottom: none;
     }
+
+    .divider {
+      margin: 2rem 0;
+      font-size: clamp(24px, 4vw, 48px);
+    }
   </style>
 </head>
 
@@ -70,9 +75,12 @@
   <div class="container">
     <p>
       Obvious is a hands-on, no-fluff advisory for CEOs, founders, and boards at the intersection of Design, AI & Purpose — helping create modern brands, bold products, and smart strategies that make a dent.
-      <br><br>
+    </p>
+
+    <p>
       From sparring sessions to interim leadership. <a href="mailto:frank@thisisobvious.com">Get in touch</a>.
     </p>
+
     <h5>© 2025 Obvious · <a href="mailto:frank@thisisobvious.com">Contact</a> · <a href="https://www.thisisobvious.com/legal.html" target="_blank">Legal</a></h5>
   </div>
 </body>
