--- a/index.html
+++ b/index.html
@@ -75,10 +75,8 @@
   <div class="container">
     <p>
       Obvious is a hands-on, no-fluff advisory for CEOs, founders, and boards at the intersection of Design, AI & Purpose — helping create modern brands, bold products, and smart strategies that make a dent.
-    </p>
+      <a href="mailto:frank@thisisobvious.com">Get in touch</a>.
 
-    <p>
-      From sparring sessions to interim leadership. <a href="mailto:frank@thisisobvious.com">Get in touch</a>.
     </p>
 
     <h5>© 2025 Obvious · <a href="mailto:frank@thisisobvious.com">Contact</a> · <a href="https://www.thisisobvious.com/legal.html" target="_blank">Legal</a></h5>
