Update contact link in index.html
Removed the availability date from the contact link.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <div class="container">
     <p>
       Obvious is a hands-on, no-fluff advisory for CEOs, founders, and boards at the intersection of Design, AI & Purpose — helping create modern brands, bold products, and smart strategies that make a dent.
-      <a href="mailto:frank@thisisobvious.com">Get in touch</a> — available from Jan 26.
+      <a href="mailto:frank@thisisobvious.com">Get in touch</a>
     </p>
 
     <h5>© 2025 Obvious · <a href="mailto:frank@thisisobvious.com">Contact</a> · <a href="https://www.thisisobvious.com/legal.html" target="_blank">Legal</a></h5>
