--- a/index.html
+++ b/index.html
@@ -70,8 +70,14 @@
 <body>
   <div class="container">
     <p>
-      Obvious is a hands-on, no-fluff advisory for CEOs, founders, and boards at the intersection of Design, AI & Purpose — helping create modern brands, bold products, and smart strategies that make a dent.
-      <a href="mailto:frank@thisisobvious.com">Get in touch</a>
+      <p>I don’t run an agency.</p>
+  <p>I sit next to founders.</p>
+<p>I ask the uncomfortable questions.</p>
+<p>I help make the tough calls — product, brand, strategy.</p>
+<p></p>
+<p>If you need decks and slogans, don’t call me.</p>
+<p>If you’re stuck on what really matters next — 
+      <a href="mailto:frank@thisisobvious.com">do</a>.
     </p>
 
     <h5>© 2025 Obvious · <a href="mailto:frank@thisisobvious.com">Contact</a> · <a href="https://www.thisisobvious.com/legal.html" target="_blank">Legal</a></h5>
