--- a/index.html
+++ b/index.html
@@ -70,14 +70,8 @@
 <body>
   <div class="container">
     <p>
-      <p>I don’t run an agency.</p>
-  <p>I sit next to founders.</p>
-<p>I ask the uncomfortable questions.</p>
-<p>I help make the tough calls — product, brand, strategy.</p>
-<p></p>
-<p>If you need decks and slogans, don’t call me.</p>
-<p>If you’re stuck on what really matters next — 
-      <a href="mailto:frank@thisisobvious.com">do</a>.
+      I sit next to founders, executives or boards to make the hard decisions — product, brand, strategy. If that’s what you need — 
+      <a href="mailto:frank@thisisobvious.com">get in touch</a>.
     </p>
 
     <h5>© 2025 Obvious · <a href="mailto:frank@thisisobvious.com">Contact</a> · <a href="https://www.thisisobvious.com/legal.html" target="_blank">Legal</a></h5>
