--- a/index.html
+++ b/index.html
@@ -9,50 +9,41 @@
   <link rel="stylesheet" href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400,500,700&display=swap">
 
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     html, body {
       margin: 0;
       padding: 0;
+      height: 100%;
       font-family: 'Satoshi', sans-serif;
-      font-weight: 400;
       background: radial-gradient(circle at 30% 40%, #f9f9f9, #ffffff);
       color: rgba(0, 0, 0, 0.85);
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+      justify-content: center; /* Centers the main text vertically */
+      align-items: center;
       font-size: clamp(24px, 8vw, 64px);
       line-height: 1.25;
       text-align: left;
       overflow-x: hidden;
-    }
-
-    body {
-      height: 100dvh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       padding: 0 20px;
-      box-sizing: border-box;
-      overflow-y: auto;
-      overscroll-behavior: contain;
     }
 
-    .container {
-      width: 100%;
+    .content {
       max-width: clamp(90%, 80vw, 1200px);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-      padding: 0 20px;
-      margin: 0 auto;
+      width: 100%;
     }
 
-    p {
-      margin: 0;
-    }
-
-    h5 {
-      font-size: clamp(16px, 2vw, 24px);
-      font-weight: 400;
-      margin-top: 10vh;
-      color: rgba(0, 0, 0, 0.85);
+    footer {
+      margin-top: auto;
+      padding-bottom: 40px;
+      font-size: clamp(14px, 2vw, 20px);
+      color: rgba(0, 0, 0, 0.75);
     }
 
     a, a:active, a:visited {
@@ -68,13 +59,16 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="content">
     <p>
-      I sit next to founders, executives or boards to make the hard decisions — product, brand, strategy. If that’s what you need — 
-      <a href="mailto:frank@thisisobvious.com">get in touch</a>.
+      I sit next to founders, executives or boards to make the hard decisions — product, brand, strategy.  
+      If that’s what you need — <a href="mailto:frank@thisisobvious.com">get in touch</a>.
     </p>
-
-    <h5>© 2025 Obvious · <a href="mailto:frank@thisisobvious.com">Contact</a> · <a href="https://www.thisisobvious.com/legal.html" target="_blank">Legal</a></h5>
   </div>
+
+  <footer>
+    © 2025 Obvious · <a href="mailto:frank@thisisobvious.com">Contact</a> · 
+    <a href="https://www.thisisobvious.com/legal.html" target="_blank">Legal</a>
+  </footer>
 </body>
 </html>
