--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Obvious</title>
-
-  <!-- Satoshi Font -->
   <link rel="stylesheet" href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400,500,700&display=swap">
 
   <style>
@@ -17,41 +15,41 @@
       width: 100%;
       height: 100%;
       font-family: 'Satoshi', sans-serif;
-      background: #ffffff;
+      background: radial-gradient(circle at 30% 40%, #f9f9f9, #ffffff);
       color: rgba(0, 0, 0, 0.85);
     }
 
-    /* Center the content perfectly */
+    /* Your centered content stays exactly as it was */
     .content {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       width: 100%;
-      max-width: 900px;
-      font-size: clamp(24px, 6vw, 44px);
-      line-height: 1.3;
-      padding: 0 40px;
+      max-width: clamp(90%, 80vw, 1200px);
+      font-size: clamp(24px, 8vw, 64px);
+      line-height: 1.25;
+      text-align: left;
+      padding: 0 20px;
     }
 
-    /* Footer aligned to same left margin as content, pinned to bottom */
+    /* Only thing changed → footer aligns to same left edge */
     footer {
       position: absolute;
       bottom: 40px;
       left: 50%;
       transform: translateX(-50%);
       width: 100%;
-      max-width: 900px;
-      padding: 0 40px;
-      font-size: clamp(14px, 2vw, 18px);
-      color: rgba(0, 0, 0, 0.6);
-      text-align: left;
+      max-width: clamp(90%, 80vw, 1200px);
+      padding: 0 20px;
+      font-size: clamp(14px, 2vw, 20px);
+      color: rgba(0, 0, 0, 0.75);
     }
 
     a {
       color: rgba(0, 0, 0, 0.85);
       text-decoration: none;
-      border-bottom: 1.5px solid rgba(0, 0, 0, 0.85);
+      border-bottom: 2px solid rgba(0, 0, 0, 0.85);
     }
 
     a:hover {
@@ -63,13 +61,13 @@
 <body>
   <div class="content">
     <p>
-      I sit next to founders, executives or boards to make the hard decisions — product, brand, strategy.
+      I sit next to founders, executives or boards to make the hard decisions — product, brand, strategy.  
       If that’s what you need — <a href="mailto:frank@thisisobvious.com">get in touch</a>.
     </p>
   </div>
 
   <footer>
-    © 2025 Obvious · <a href="mailto:frank@thisisobvious.com">Contact</a> ·
+    © 2025 Obvious · <a href="mailto:frank@thisisobvious.com">Contact</a> · 
     <a href="https://www.thisisobvious.com/legal.html" target="_blank">Legal</a>
   </footer>
 </body>
