--- a/legal.html
+++ b/legal.html
@@ -2,120 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Legal — Obvious</title>
-
-  <!-- Satoshi Font (Fontshare) -->
-  <link rel="stylesheet" href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400,500,700&display=swap">
-
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Satoshi', sans-serif;
-      font-weight: 400;
-      background: radial-gradient(circle at 30% 40%, #f9f9f9, #ffffff);
-      color: rgba(0, 0, 0, 0.85);
-      font-size: clamp(16px, 2vw, 24px);
-      line-height: 1.6;
-      text-align: left;
-      overflow-x: hidden;
-    }
-
-    body {
-      padding: 40px 20px;
-      box-sizing: border-box;
-    }
-
-    .container {
-      max-width: 80%;
-      margin: 0 auto;
-    }
-
-    h1 {
-      font-size: clamp(32px, 6vw, 48px);
-      font-weight: 500;
-      margin-bottom: 2rem;
-    }
-
-    h2 {
-      font-size: clamp(20px, 3vw, 28px);
-      font-weight: 500;
-      margin-top: 3rem;
-      margin-bottom: 1rem;
-    }
-
-    p {
-      margin: 0 0 1.5rem 0;
-    }
-
-    a, a:active, a:visited {
-      color: #000;
-      text-decoration: none;
-      border-bottom: 2px solid #000;
-    }
-
-    a:hover {
-      border-bottom: none;
-    }
-
-    h5 {
-      font-size: clamp(14px, 1.5vw, 18px);
-      font-weight: 400;
-      margin-top: 10vh;
-      color: rgba(0, 0, 0, 0.5);
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Obvious – Legal Notice</title>
+  <link rel="stylesheet" href="style.css" />
+  <script defer src="script.js"></script>
 </head>
+<body class="legal-page">
+  <div class="page">
+    <header class="header fade">
+      <div class="header__inner fade-target">
+        <a class="header__label" href="index.html">Obvious</a>
+        <a href="mailto:frank@thisisobvious.com" class="header__contact">Contact</a>
+      </div>
+    </header>
 
-<body>
-  <div class="container">
-    <h1>Legal Notice</h1>
+    <main>
+      <section class="legal hero fade snap-section">
+        <div class="container legal__container fade-target">
+          <h1 class="legal__title">Legal Notice</h1>
+          <p class="legal__subtitle">Information pursuant to § 5 TMG</p>
 
-    <h2>Information pursuant to § 5 TMG</h2>
-    <p>
-      Frank Müller-Pierstorff<br>
-      Personal project website<br>
-      Email: <a href="mailto:frank@thisisobvious.com">frank@thisisobvious.com</a>
-    </p>
+          <div class="legal__content">
+            <p>Frank Müller-Pierstorff<br />
+            Personal project website<br />
+            Email: <a href="mailto:frank@thisisobvious.com">frank@thisisobvious.com</a></p>
 
-    <h2>Liability for content</h2>
-    <p>
-      The contents of this website were created with great care. However, I cannot guarantee the accuracy, completeness, or timeliness of the content. As a service provider, I am responsible for my own content on these pages pursuant to § 7(1) TMG. According to §§ 8 to 10 TMG, however, I am not obligated to monitor transmitted or stored third-party information or to investigate circumstances that indicate illegal activity.
-    </p>
-    <p>
-      Obligations to remove or block the use of information under general law remain unaffected. Liability in this respect, however, is only possible from the time of knowledge of a specific infringement. Upon becoming aware of any such legal violations, I will remove the content immediately.
-    </p>
+            <h2>Liability for content</h2>
+            <p>The contents of this website were created with great care. However, I cannot guarantee the accuracy, completeness, or timeliness of the content. As a service provider, I am responsible for my own content on these pages pursuant to § 7(1) TMG. According to §§ 8 to 10 TMG, however, I am not obligated to monitor transmitted or stored third-party information or to investigate circumstances that indicate illegal activity.</p>
+            <p>Obligations to remove or block the use of information under general law remain unaffected. Liability in this respect, however, is only possible from the time of knowledge of a specific infringement. Upon becoming aware of any such legal violations, I will remove the content immediately.</p>
 
-    <h2>Liability for links</h2>
-    <p>
-      This website contains links to external third-party websites, over whose content I have no control. Therefore, I cannot assume any liability for this external content. The respective provider or operator of the pages is always responsible for the content of the linked pages.
-    </p>
-    <p>
-      The linked pages were checked for possible legal violations at the time of linking. No illegal content was recognizable at that time. Permanent control of the content of the linked pages is not reasonable without concrete evidence of a legal violation. If I become aware of any such infringements, I will remove such links immediately.
-    </p>
+            <h2>Liability for links</h2>
+            <p>This website contains links to external third-party websites, over whose content I have no control. Therefore, I cannot assume any liability for this external content. The respective provider or operator of the pages is always responsible for the content of the linked pages.</p>
+            <p>The linked pages were checked for possible legal violations at the time of linking. No illegal content was recognizable at that time. Permanent control of the content of the linked pages is not reasonable without concrete evidence of a legal violation. If I become aware of any such infringements, I will remove such links immediately.</p>
 
-    <h2>Data protection</h2>
-    <p>
-      This website does not use cookies, analytics tools, or any tracking mechanisms. No personal data is collected unless you actively contact me (e.g., by email).
-    </p>
-    <p>
-      Emails sent to me are stored securely and only used for communication. No data is shared with third parties. You can request the deletion of your data at any time by contacting <a href="mailto:frank@thisisobvious.com">frank@thisisobvious.com</a>.
-    </p>
+            <h2>Data protection</h2>
+            <p>This website does not use cookies, analytics tools, or any tracking mechanisms. No personal data is collected unless you actively contact me (e.g., by email). Emails sent to me are stored securely and only used for communication. No data is shared with third parties. You can request the deletion of your data at any time by contacting <a href="mailto:frank@thisisobvious.com">frank@thisisobvious.com</a>.</p>
 
-    <h2>Copyright</h2>
-    <p>
-      All content on this site is subject to copyright. Any use or reproduction requires prior written permission.
-    </p>
+            <h2>Copyright</h2>
+            <p>All content on this site is subject to copyright. Any use or reproduction requires prior written permission.</p>
 
-    <h2>Contact</h2>
-    <p>
-      Frank Müller-Pierstorff<br>
-      Berlin, Germany<br>
-      <a href="mailto:frank@thisisobvious.com">frankt@thisisobvious.com</a>
-    </p>
+            <p class="legal__contact-block">Contact<br />
+            Frank Müller-Pierstorff<br />
+            Berlin, Germany<br />
+            <a href="mailto:frank@thisisobvious.com">frank@thisisobvious.com</a><br />
+            © 2025 Obvious</p>
+          </div>
+        </div>
+      </section>
+    </main>
 
-    <h5>© 2025 Obvious</h5>
+    <footer class="footer fade snap-section">
+      <div class="container fade-target">
+        <div class="footer__top">
+          <span class="footer__copy">© 2025 Obvious. All rights reserved.</span>
+          <nav class="footer__links">
+            <a href="https://www.linkedin.com/in/frankmuellerpierstorff/" target="_blank" rel="noopener">LinkedIn</a>
+            <a href="legal.html">Legal</a>
+          </nav>
+        </div>
+        <div class="footer__divider"></div>
+        <div class="footer__logo">
+          <img src="logo.png" alt="Obvious logo" />
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
+
