--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Obvious – Design Partner for Founders and Funds</title>
+  <title>This is Obvious</title>
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
