--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container fade-target">
           <div class="hero__content">
             <h1 class="hero__headline">Design Partner for<br />Founders &amp; Funds.</h1>
-            <p class="hero__subline">Design &rarr; Focus &rarr; Results</p>
+            <p class="hero__subline">Design &rarr; Direction &rarr; Value</p>
           </div>
         </div>
         <div class="hero__scroll">&#8595;</div>
